feat: implement product service